<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoMaps</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="take_photo">Take Photo</string>
    <string name="view_photos">View Photos</string>
    <string name="upload_photos">Upload Photos</string>
    <string name="title_activity_save_photo">SavePhoto</string>
    <string name="page">Image</string>
    <string name="comment">Description:</string>
    <string name="location">Location:</string>
    <string name="date">Date:</string>
    <string name="thumbnail">Image Thumbnail</string>
    <string name="save">Save Photo</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="back">Main Menu</string>
    <string name="upload">Uploaded?</string>
    <string name="edit">Edit</string>
    <string name="title_activity_view_photos">ViewPhotos</string>
    <string name="title_activity_my">MyActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
