<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="edu.newpaltz.photomaps.ViewPhotos">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:id="@+id/page"
        android:textSize="20sp"
        android:text="@string/page"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <ImageView
        android:id="@+id/thumbnail"
        android:contentDescription="@string/thumbnail"
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="250dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/location"
            android:textSize="20sp"
            android:text="@string/location"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/editLocation"
            android:text="@string/edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/comment"
            android:textSize="20sp"
            android:text="@string/comment"
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/editComment"
            android:text="@string/edit"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/date"
        android:textSize="20sp"
        android:text="@string/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/upload"
        android:textSize="20sp"
        android:text="@string/upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

        <Button
            android:layout_gravity="center"
            android:id="@+id/delete"
            android:text="@string/delete"
            android:layout_width="130sp"
            android:layout_height="wrap_content" />

    </LinearLayout>

</ScrollView>
