<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="edu.newpaltz.photomaps.SavePhoto">

    <ImageView
        android:id="@+id/thumbnail"
        android:contentDescription="@string/thumbnail"
        android:text="@string/hello_world"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <TextView
        android:textSize="25sp"
        android:text="@string/comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="text"
        android:id="@+id/photo_comment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:textSize="25sp"
        android:text="@string/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <EditText
        android:inputType="text"
        android:id="@+id/photo_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            style="@android:style/ButtonBar"
            android:id="@+id/saveButton"
            android:text="@string/save"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <View android:layout_height="fill_parent"
            android:layout_width="2dp"
            android:background="#90909090"/>

        <Button
            style="@android:style/ButtonBar"
            android:id="@+id/cancelButton"
            android:text="@string/cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</LinearLayout>
