<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MainMenu">

    <Button
        android:text="@string/take_photo"
        android:id="@+id/take_photo"
        android:layout_gravity="center"
        android:width="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/view_photos"
        android:id="@+id/view_photos"
        android:layout_gravity="center"
        android:width="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:text="@string/upload_photos"
        android:id="@+id/upload_photos"
        android:layout_gravity="center"
        android:width="150dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>
